fix: container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 services:
   db:
     image: mysql:8.0
-    container_name: mysql
+    container_name: nestjs_template_mysql
     volumes:
       - mysql:/var/lib/mysql
     environment:
