--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/schematics": "^9.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
