--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
 # for App
-DATABASE_URL='mysql://user_name:very_secure@localhost:13306/database_name?schema=public'
+DATABASE_URL='mysql://root:root_password@localhost:3306/database?schema=public'
 COOKIE_SECRET='xxx'
 FRONTEND_URL='http://localhost:3000'
 
 # for Docker
 DB_DATABASE='database'
-DB_USERNAME='username'
-DB_PASSWORD='password'
 DB_ROOT_PASSWORD='root_password'
-DB_PORT=13306
+DB_PORT=3306
