--- a/package.json
+++ b/package.json
@@ -14,38 +14,38 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@fastify/cookie": "^8.1.0",
-    "@fastify/static": "^6.5.0",
-    "@nestjs/common": "^9.0.11",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.11",
-    "@nestjs/platform-fastify": "^9.0.11",
-    "@nestjs/swagger": "^6.0.5",
-    "@prisma/client": "^4.1.1",
-    "axios": "^0.27.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "@fastify/cookie": "8.3.0",
+    "@fastify/static": "6.10.1",
+    "@nestjs/common": "9.4.0",
+    "@nestjs/config": "2.3.1",
+    "@nestjs/core": "9.4.0",
+    "@nestjs/platform-fastify": "9.4.0",
+    "@nestjs/swagger": "6.3.0",
+    "@prisma/client": "4.12.0",
+    "axios": "0.27.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@types/js-yaml": "^4.0.5",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "fastify": "^4.3.0",
-    "js-yaml": "^4.1.0",
-    "prisma": "^4.1.1",
-    "source-map-support": "^0.5.20",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.6.2"
+    "@nestjs/cli": "9.4.0",
+    "@nestjs/schematics": "9.1.0",
+    "@types/js-yaml": "4.0.5",
+    "@types/node": "16.18.23",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
+    "eslint": "8.38.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "4.2.1",
+    "fastify": "4.15.0",
+    "js-yaml": "4.1.0",
+    "prisma": "4.12.0",
+    "source-map-support": "0.5.21",
+    "ts-loader": "9.4.2",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.5"
   }
 }
