--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write src",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run"
   },
   "dependencies": {
     "@fastify/cookie": "8.3.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@nestjs/cli": "9.4.0",
     "@nestjs/schematics": "9.1.0",
+    "@nestjs/testing": "^9.4.0",
     "@types/js-yaml": "4.0.5",
     "@types/node": "16.18.23",
     "@typescript-eslint/eslint-plugin": "5.58.0",
@@ -46,6 +48,7 @@
     "source-map-support": "0.5.21",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vitest": "^0.30.1"
   }
 }
